hphp/test/zend/bad/ext/spl/tests/bug46088.php
<?php

$x = new RegexIterator(new ArrayIterator(range(1, 10)), '/\d/');
var_dump($x->accept());

?>